--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -5,20 +5,28 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>kafkablocks</groupId>
-        <artifactId>parent-pom</artifactId>
-        <version>0.0.1</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.2.RELEASE</version>
+        <relativePath/>
     </parent>
 
+    <groupId>kafkablocks</groupId>
     <artifactId>examples</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <version>0.0.1</version>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>12</java.version>
+    </properties>
 
     <dependencies>
         <dependency>
             <groupId>kafkablocks</groupId>
             <artifactId>core</artifactId>
-            <version>0.0.1</version>
+            <version>1.0.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
