--- a/examples/src/main/resources/docker/Dockerfile
+++ b/examples/src/main/resources/docker/Dockerfile
@@ -1,5 +1,4 @@
-FROM repo.croc.ru/ewrnd.docker/openjdk-base:8
+FROM adoptopenjdk/openjdk11:alpine-jre
 ARG JAR_FILE
-ADD revision.txt /revision.txt
-ADD ${JAR_FILE} /usr/share/reports-processor.jar
-CMD ["java", "-jar", "/usr/share/reports-processor.jar"]
+ADD ${JAR_FILE} /usr/share/examples.jar
+CMD ["java", "-jar", "/usr/share/examples.jar"]
