--- a/slides/pom.xml
+++ b/slides/pom.xml
@@ -106,7 +106,7 @@
                     </dependency>
                 </dependencies>
                 <configuration>
-                    <sourceDocumentName>presentation.adoc</sourceDocumentName>
+                    <sourceDocumentName>what_is_kafka.adoc</sourceDocumentName>
                     <requires>
                         <require>asciidoctor-diagram</require>
                     </requires>
