--- a/examples/bin/docker-compose.yaml
+++ b/examples/bin/docker-compose.yaml
@@ -1,36 +1,25 @@
-version: '2.4'
+version: '3.7'
 services:
-
   zookeeper:
-    image: wurstmeister/zookeeper
+    image: confluentinc/cp-zookeeper:5.4.1
     container_name: zookeeper
     ports:
       - "2181:2181"
-
-  # image info: https://hub.docker.com/r/wurstmeister/kafka/
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
   kafka:
-    image: wurstmeister/kafka
+    image: confluentinc/cp-server:5.4.1
     container_name: kafka
     depends_on:
       - zookeeper
     ports:
       - "9092:9092"
     environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      # topics to create, in format: <topic name>:<partitions count>:<replicas count>
-      KAFKA_CREATE_TOPICS: >-
-        position:1:1,
-        distance:1:1,
-        speed:1:1,
-        acceleration:1:1
-
-  examples:
-    image: examples
-    container_name: examples
-    environment:
-      TZ: "Europe/Moscow"
-    depends_on:
-      kafka:
-        condition: service_started
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_CONFLUENT_LICENSE_TOPIC_REPLICATION_FACTOR: 1
